# apps/api-gateway/openapi/guest-v1.json
@@ -89,14 +89,6 @@
         ]
       }
     },
-    "/auth/check": {
-      "post": {
-        "operationId": "checkGuestEmail",
-        "tags": [
-          "auth"
-        ]
-      }
-    },
     "/auth/change-password": {
       "post": {
         "operationId": "changeGuestPassword",
